--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -9,6 +9,10 @@ on:
       - 'main'
       - 'release/**'
       - '!dev/**'
+  pull_request:
+    type: [opened, reopened, synchoronize, labeled, unlabeled]
+    paths:
+    branches:
   workflow_dispatch:
 jobs:
   say-hello:
